# ducks

./: CMakeLists.txt  Cherrety.cpp  Cherrety.h  Chirki.cpp  Chirki.h  Duck.cpp  Duck.h  Farm.cpp  Farm.h  Hunter.cpp  Hunter.h  Lake.cpp  Lake.h  Layaing.cpp  Layaing.h  Madagascar.cpp  Madagascar.h  Marble.cpp  Marble.h  Peganky.cpp  Peganky.h  main.cpp  test.cpp
