cmake_minimum_required(VERSION 3.16)
project(grisha)

set(CMAKE_CXX_STANDARD 20)

add_executable(grisha test.cpp Lake.cpp Lake.h Duck.cpp Duck.h Hunter.cpp Hunter.h Marble.cpp Marble.h Madagascar.cpp Madagascar.h Chirki.cpp Chirki.h Farm.cpp Farm.h main.cpp Cherrety.cpp Cherrety.h Layaing.cpp Layaing.h Peganky.cpp Peganky.h)